Adicionado configuração para proteção de dados

--- a/ApiUsuarios/ApiUsuarios.csproj
+++ b/ApiUsuarios/ApiUsuarios.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a7c9d4f1-fe87-4f21-ae94-39c7accf99a6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
